package org.example;

public class NumericLiteral extends Literal<Double> {

    public NumericLiteral(Double value) {
        super(value);
    }

}
