package org.example;

public class TextLiteral extends Literal<String> {

    public TextLiteral(String value) {
        super(value);
    }
}
